style: fix large heading on mobile

--- a/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_default.css
+++ b/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_default.css
@@ -23,5 +23,20 @@ section .layout_content_inner.cf > h1,
 section .layout_content_inner.cf > .blog > h1 {
     margin-top: 0;
 
-    font-size: 2em;
+    font-size: 1.4rem;
+}
+@media (min-width: 985px) {
+    section .layout_content_inner.cf > h1,
+    section .layout_content_inner.cf > .blog > h1 {
+        font-size: 2rem;
+    }
+}
+
+section .layout_content_inner.cf h2 {
+    font-size: 1.2rem;
+}
+@media (min-width: 985px) {
+    section .layout_content_inner.cf h2 {
+        font-size: 1.6rem;
+    }
 }
